--- a/src/components/Map/TileChartMap/TileChartMap.scss
+++ b/src/components/Map/TileChartMap/TileChartMap.scss
@@ -91,14 +91,6 @@
     stroke-width 250ms;
     stroke: #ccc;
   }
-
-  .highcharts-point-hover {
-    transition: fill 0ms,
-    fill-opacity 0ms;
-    cursor: default;
-    fill: var(--pacific) !important;
-    fill-opacity: 0.5;
-  }
 }
 
 /*
@@ -116,8 +108,6 @@ x/y positioning on the SVG elements.
 
 .cfpb-chart {
   position: relative;
-
-  min-height: 400px;
 
   // border: 1px red solid;
   // margin-bottom: 25px;
@@ -156,10 +146,6 @@ x/y positioning on the SVG elements.
 
       .value {
         margin-top: 4px;
-      }
-
-      &.deselected {
-        color: var(--gray);
       }
     }
   }
@@ -469,23 +455,14 @@ $mobile-xs-tiles-breakpoint-max: 400px;
       margin-top: 4px;
       font-weight: 400;
     }
-
-    &.hover {
-      .abbr,
-      .value {
-        text-decoration: underline;
-      }
-    }
-
-    &.deselected {
-      color: rgb(90 93 97 / 100%);
-    }
   }
 }
 
 // This takes over for looking good at the minimum height of 400px
 @media screen and (max-width: $mobile-tiles-breakpoint-max) {
   .cfpb-chart[data-chart-type='tile_map'] {
+    padding: 0 !important;
+
     .highcharts-data-label {
       line-height: 1;
 
